--- a/index.html
+++ b/index.html
@@ -1,10 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>投稿管理画面</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.1.2/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-gray-100">
+
+    <!-- 管理画面ヘッダー -->
+    <header class="bg-blue-600 text-white p-4">
+        <h1 class="text-2xl font-semibold">投稿管理画面</h1>
+    </header>
+
+    <div class="container mx-auto my-8">
+        <!-- 新規投稿フォーム -->
+        <section class="bg-white p-6 rounded-lg shadow-md mb-6">
+            <h2 class="text-xl font-bold mb-4">新規投稿作成</h2>
+            <form action="#" method="POST">
+                <div class="mb-4">
+                    <label for="title" class="block text-sm font-medium text-gray-700">タイトル</label>
+                    <input type="text" id="title" name="title" class="w-full p-2 mt-1 border rounded-md" placeholder="タイトルを入力">
+                </div>
+                <div class="mb-4">
+                    <label for="content" class="block text-sm font-medium text-gray-700">内容</label>
+                    <textarea id="content" name="content" class="w-full p-2 mt-1 border rounded-md" rows="4" placeholder="投稿内容を入力"></textarea>
+                </div>
+                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600">投稿する</button>
+            </form>
+        </section>
+
+        <!-- 投稿リスト -->
+        <section class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-xl font-bold mb-4">投稿一覧</h2>
+            <table class="w-full table-auto border-collapse">
+                <thead>
+                    <tr>
+                        <th class="border px-4 py-2 text-left">タイトル</th>
+                        <th class="border px-4 py-2 text-left">作成日</th>
+                        <th class="border px-4 py-2 text-left">操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- 投稿例 -->
+                    <tr>
+                        <td class="border px-4 py-2">サンプル投稿タイトル</td>
+                        <td class="border px-4 py-2">2025-01-07</td>
+                        <td class="border px-4 py-2">
+                            <a href="#" class="text-blue-500 hover:text-blue-700">編集</a> |
+                            <a href="#" class="text-red-500 hover:text-red-700">削除</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="border px-4 py-2">別のサンプル投稿</td>
+                        <td class="border px-4 py-2">2025-01-06</td>
+                        <td class="border px-4 py-2">
+                            <a href="#" class="text-blue-500 hover:text-blue-700">編集</a> |
+                            <a href="#" class="text-red-500 hover:text-red-700">削除</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </div>
+
 </body>
 </html>
